--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -36,7 +36,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "When we anticipate numerous out-of-vocabulary (OOV) words during test, the preferred tokenization method would be **subword tokenization**, because it excels at handling OOV words by decomposing them into smaller, more common subunits known as subwords. By representing OOV words using subwords, the model can still capture meaningful information from these words, even if they haven't been explicitly encountered during training.\n",
+    "When we anticipate numerous out-of-vocabulary (OOV) words during test, the preferred tokenization method would be **subword tokenization**, because it performs well at handling OOV words by decomposing them into smaller, more common subunits known as subwords. By representing OOV words using subwords, the model can still capture meaningful information from these words, even if they haven't been explicitly encountered during training.\n",
     "\n",
     "\n",
     "Subword tokenization approaches fall into two main categories. **WordPiece** which splits words into character subsequences based on a predefined vocabulary of subwords. It's particularly effective as it can generate subwords that correspond to meaningful morphemes.\n",
@@ -78,22 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-29T15:01:04.550685400Z",
-     "start_time": "2023-11-29T15:01:04.529620300Z"
-    },
-    "collapsed": false
+     "end_time": "2023-12-01T21:33:07.335532800Z",
+     "start_time": "2023-12-01T21:33:07.313429600Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[1, 0, 0, 1, 0, 1, 1, 1, 1, 0]"
-      ]
+      "text/plain": "[1, 0, 0, 1, 0, 1, 1, 1, 1, 0]"
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-01T21:12:15.483330700Z",
-     "start_time": "2023-12-01T21:12:15.456780Z"
+     "end_time": "2023-12-01T21:33:08.125263100Z",
+     "start_time": "2023-12-01T21:33:08.120744200Z"
     }
    },
    "outputs": [
@@ -217,7 +215,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Exercise"
+    "### Exercise 2. (c)"
    ],
    "metadata": {
     "collapsed": false
@@ -226,154 +224,91 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-28T17:03:43.860357400Z",
-     "start_time": "2023-11-28T17:03:39.407274100Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "\n",
-    "class LSTMLanguageModel(nn.Module):\n",
-    "    def __init__(self, vocab_size, embed_size, hidden_size, num_layers):\n",
-    "        \"\"\"\n",
-    "        Initializes the LSTMLanguageModel.\n",
-    "\n",
-    "        Parameters:\n",
-    "            - vocab_size (int): Size of the vocabulary.\n",
-    "            - embed_size (int): Size of the word embeddings.\n",
-    "            - hidden_size (int): Size of the hidden state of the LSTM.\n",
-    "            - num_layers (int): Number of layers in the LSTM.\n",
-    "        \"\"\"\n",
-    "        super(LSTMLanguageModel, self).__init__()\n",
-    "        self.embedding = nn.Embedding(vocab_size, embed_size)\n",
-    "        self.lstm = nn.LSTM(embed_size, hidden_size, num_layers, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_size, vocab_size)\n",
-    "\n",
-    "    def forward(self, x, h0=None):\n",
-    "        \"\"\"\n",
-    "        Defines the forward pass of the LSTMLanguageModel.\n",
-    "\n",
-    "        Parameters:\n",
-    "            - x (torch.Tensor): Input sequence of token indices (batch_size, sequence_length).\n",
-    "            - h0 (torch.Tensor, optional): Initial hidden state (num_layers * num_directions, batch_size, hidden_size).\n",
-    "\n",
-    "        Returns:\n",
-    "            - output (torch.Tensor): Output sequence from the language model (batch_size, sequence_length, vocab_size).\n",
-    "            - hn (torch.Tensor): Final hidden state (num_layers * num_directions, batch_size, hidden_size).\n",
-    "        \"\"\"\n",
-    "        embedded = self.embedding(x)\n",
-    "        output, hn = self.lstm(embedded, h0)\n",
-    "        output = self.fc(output)\n",
-    "        return output, hn\n",
-    "\n",
-    "    def generate(self, x, h0=None, no=10):\n",
-    "        \"\"\"\n",
-    "        Generates a sequence of token indices using greedy decoding.\n",
-    "\n",
-    "        Parameters:\n",
-    "            - x (torch.Tensor): Input token index (batch_size, 1).\n",
-    "            - h0 (torch.Tensor, optional): Initial hidden state (num_layers * num_directions, batch_size, hidden_size).\n",
-    "            - no (int): Number of tokens to be generated.\n",
-    "\n",
-    "        Returns:\n",
-    "            - generated_sequence (torch.Tensor): Decoded sequence of token indices (batch_size, no).\n",
-    "        \"\"\"\n",
-    "        with torch.no_grad():\n",
-    "            generated_sequence = []\n",
-    "            current_token = x\n",
-    "\n",
-    "            for _ in range(no):\n",
-    "                output, hn = self.forward(current_token, h0)\n",
-    "                probabilities = nn.functional.softmax(output[:, -1, :], dim=1)\n",
-    "                next_token = torch.argmax(probabilities, dim=1, keepdim=True)\n",
-    "                generated_sequence.append(next_token)\n",
-    "                current_token = next_token\n",
-    "\n",
-    "            generated_sequence = torch.cat(generated_sequence, dim=1)\n",
-    "            return generated_sequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-29T15:09:18.527840100Z",
-     "start_time": "2023-11-29T15:09:18.507841300Z"
-    },
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
     "class RNNLM(nn.Module):\n",
-    "    \"\"\"Recurrent Neural Network (RNN) Language Model\"\"\"\n",
-    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, num_layers, rnn_type='lstm'):\n",
-    "        super(RNNLM, self).__init__()\n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        if rnn_type == 'lstm':\n",
-    "            self.rnn = nn.LSTM(embedding_dim, hidden_dim, num_layers, batch_first=True)\n",
-    "        elif rnn_type == 'gru':\n",
-    "            self.rnn = nn.GRU(embedding_dim, hidden_dim, num_layers, batch_first=True)\n",
-    "        self.linear = nn.Linear(hidden_dim, vocab_size)\n",
+    "    \"\"\"RNN-based language model.\n",
+    "\n",
+    "    Args:\n",
+    "        vocab_size: The size of the vocabulary.\n",
+    "        embedding_dim: The dimension of the word embeddings.\n",
+    "        hidden_dim: The dimension of the hidden state of the RNN.\n",
+    "        rnn_type: The type of RNN cell to use ('lstm' or 'gru').\n",
+    "        num_layers: The number of layers of the RNN.\n",
+    "        dropout: The dropout probability.\n",
+    "\n",
+    "    Attributes:\n",
+    "        embeddings: The word embeddings layer.\n",
+    "        rnn: The recurrent neural network.\n",
+    "        output_layer: The output layer.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim, rnn_type, num_layers, dropout=0.5):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        rnn_class = nn.LSTM if rnn_type == 'lstm' else nn.GRU\n",
+    "\n",
+    "        self.rnn = rnn_class(embedding_dim, hidden_dim, num_layers, dropout=dropout)\n",
+    "        self.output_layer = nn.Linear(hidden_dim, vocab_size)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        Forward pass through the RNNLM model\n",
+    "        \"\"\"Forward pass through the language model.\n",
     "\n",
     "        Args:\n",
-    "            x (torch.Tensor): Input sequence of token indices (integers)\n",
-    "                Shape: (batch_size, seq_len)\n",
+    "            x: A tensor of input sequences (with shape (batch_size, seq_len)).\n",
     "\n",
     "        Returns:\n",
-    "            logits (torch.Tensor): Unnormalized log probabilities of the next word for each token in the input sequence\n",
-    "                Shape: (batch_size, seq_len, vocab_size)\n",
+    "            logits: A tensor of logits for the next word in the sequence (with shape (batch_size, seq_len, vocab_size)).\n",
     "        \"\"\"\n",
-    "        embedded = self.embedding(x)\n",
-    "        _, hidden = self.rnn(embedded)\n",
-    "        logits = self.linear(hidden)\n",
+    "\n",
+    "        embeddings = self.embeddings(x)\n",
+    "        outputs, (h_n, _) = self.rnn(embeddings)\n",
+    "        logits = self.output_layer(outputs)\n",
     "        return logits\n",
     "\n",
     "    def generate(self, x, h0, no):\n",
-    "        \"\"\"\n",
-    "        Generate text using the greedy decoding algorithm\n",
+    "        \"\"\"Generate text using the greedy decoding algorithm.\n",
     "\n",
     "        Args:\n",
-    "            x (torch.Tensor): Input token (integer)\n",
-    "                Shape: (1,)\n",
-    "            h0 (tuple): Initial hidden state of the RNN\n",
-    "                Shape: (num_layers, batch_size, hidden_dim)\n",
-    "            no (int): Desired number of tokens to be generated\n",
+    "            x: A tensor of input tokens (with shape (batch_size, 1)).\n",
+    "            h0: The initial state of the RNN (with shape (batch_size, num_layers, hidden_dim)).\n",
+    "            no: The desired number of tokens to be generated.\n",
     "\n",
     "        Returns:\n",
-    "            decoded_tokens (torch.Tensor): Sequence of token indices (integers) representing the generated text\n",
-    "                Shape: (no,)\n",
+    "            decoded_text: A tensor of decoded text as a sequence of token indices (with shape (batch_size, no)).\n",
     "        \"\"\"\n",
-    "        decoded_tokens = torch.empty(no, dtype=torch.long, device=x.device)\n",
+    "\n",
+    "        decoded_text = torch.zeros(x.size(0), no, dtype=torch.long, device=x.device)\n",
+    "        output = x\n",
+    "\n",
     "        for i in range(no):\n",
-    "            embedded = self.embedding(x.unsqueeze(0))\n",
-    "            output, h0 = self.rnn(embedded, h0)\n",
-    "            logits = self.linear(output.squeeze(0))\n",
-    "            pred = logits.argmax(dim=1)\n",
-    "            decoded_tokens[i] = pred\n",
+    "            embeddings = self.embeddings(output)\n",
+    "            rnn_output, (h_n, _) = self.rnn(embeddings, h0)\n",
+    "            logits = self.output_layer(rnn_output)\n",
+    "            topk, topk_indices = logits.topk(1, dim=2)\n",
+    "            output = topk_indices\n",
+    "            decoded_text[:, i] = output[:, 0]\n",
+    "            h0 = h_n.detach()\n",
     "\n",
-    "            x = pred.unsqueeze(0)\n",
-    "\n",
-    "        return decoded_tokens"
-   ]
+    "        return decoded_text"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-01T21:38:20.109404100Z",
+     "start_time": "2023-12-01T21:38:20.094352100Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
