--- a/Assignment 2/A2_P1.ipynb
+++ b/Assignment 2/A2_P1.ipynb
@@ -214,20 +214,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By changing the padding from zero to one, what happens is that a convolutional layer's input size will be increased by one border, ensuring that the layer's output size will be larger as well, assuming all the remaining hyper-parameters are kept the same. For example, given an image size of 30x30xK, a padding of one can be implemented so that the image's intensity values in its borders get used more that once for making convolution operations, meaning that this border data is used more times than it would be with a padding of 0. This can be crucial because important data might be in the borders, and therefore by applying a padding of 1 we ensure that the data in the borders is used more times to compute the outputs of that convolutional layer. A padding of 1 will increase the size of this given image from 30x30xK to 31x31xK, where this new border will have no importance in terms of its values, however enable the data in the real borders to get used more times. With a padding of 0 a corner will get used once and an edge either 2 (edge point next to a corner) or 3 times, while with a padding of 1 a corner data point will be used 4 times, while the edges will be used 6 times. Looking at the equation that defines the output size given the input size and the hyper-parameters defined, by changing from a padding of 0 to a padding of 1, the output size increases by (...value...)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ChatGPT's feedback with my writing style...**\n",
+    "By changing the padding from zero to one, what happens is that a convolutional layer's input size will be increased by one border, ensuring that the layer's output size will be larger as well, assuming all the remaining hyper-parameters are kept the same. \n",
     "\n",
-    "Switching the padding from 0 to 1 in a convolutional layer is like giving the edges of your input image a bit more attention. Let's say we've got a cool 30x30xK image. With a padding of 1, we're extending the party by one unit all around, turning it into a 31x31xK extravaganza.\n",
+    "Given an image size of 30x30xK, a padding of 1 can be implemented so that the image's intensity values in its borders get used more that once for making convolution operations, meaning that this border data is used more times than it would be with a padding of 0. This can be crucial because important data might be in the borders, and therefore by applying a padding of 1 we ensure that the data in the borders is used more times to compute the outputs of that convolutional layer. A padding of 1 will increase the size of this given image from 30x30xK to 31x31xK, where this new border will have no importance in terms of its values, however enable the data in the real borders to get used more times. \n",
     "\n",
-    "Now, why does this matter? Well, those pixels at the borders get more love during the convolution operation. It's like making sure your image edges are VIPs – they get used more times in the calculation. With padding 0, a corner only gets used once, and an edge (the point next to a corner) gets used 2 or 3 times. But pop in a padding of 1, and suddenly, a corner pixel is the star of the show, getting used a whopping 4 times! As for the edges, they become the popular kids, getting used 6 times.\n",
-    "\n",
-    "So, changing the padding to 1 isn't just adding a useless border; it's a strategic move to make sure your model pays extra attention to the edges and corners, where the real action might be happening."
+    "For example, for a convolutional layer with stride of 1 and kernel size of 3, with a padding of 0 a corner will get used once and an edge either 2 (edge point next to a corner) or 3 times, while with a padding of 1 a corner data point will be used 4 times, while the edges will be used 6 times."
    ]
   },
   {
@@ -241,18 +232,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By changingthe kernel size from 3 to 4, what ends up happening is that the output dimensions of the convolutional layer decrease (assuming everything else constant), while the input dimensions stay the same. Notice that by increasing the kernel size by one the number of convolutions applied to an image (for example) gets reduced, and because for each convolution operation one value is computed and added to the output of the layer, then the number of values added to the output is decreased, meaning that the output dimensions will decrease. Looking at the equation that defines the output size, by changing the kernel size from 3 to 4, the output dimensions get increased by (...value...)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ChatGPT's feedback with my writing style...**\n",
+    "By changing the kernel size from 3 to 4, what ends up happening is that the output dimensions of the convolutional layer decrease (assuming everything else constant), while the input dimensions stay the same. \n",
     "\n",
-    "Shifting the kernel size from 3 to 4 in a convolutional layer triggers a slick maneuver – the output dimensions decide to slim down (assuming everything else is on chill mode). Here's the scoop: when we jack up the kernel size by one, it's like telling the layer, 'Hey, ease up on the convolutions, would ya?'\n",
-    "\n",
-    "You see, every time we run a convolution operation, we crunch out a value that contributes to the layer's output. Now, with a kernel size of 4, each convolution operation packs a bit more punch. So, naturally, the overall number of these impactful values tossed into the output takes a dip. Less hustle, less bustle, and voila – the output dimensions take a step back."
+    "Notice that by increasing the kernel size by one the number of convolutions applied to an image (for example) gets reduced, and because for each convolution operation one value (output value) is computed, then the number of values added to the output is decreased, meaning that the output dimensions will decrease."
    ]
   },
   {
@@ -266,16 +248,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By changing the stride from 1 to 2, what ends up happening is that several convolution operations get skipped in a convolutional layer, and because each convolution computes one value of the layer's output, the output's dimensions get decreased, while the input size remains the same. With a stride of 1, what happens is that the kernel moves one column at a time in the same row, and one row at a time in the same column. However, with a stride of 2 the kernel moves two columns at a time in the same row, and two rows at a time in the same column. In short, a convolutional layer with stride of 2 skips half of the convolution operations that would be computed if that convolutional layer had a stride of 1. Looking at the equation that defines the output size, by changing the stride from 1 to 2, the output dimensions get decreased practically in half."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ChatGPT's feedback with my writing style...**\n",
+    "By changing the stride from 1 to 2, what ends up happening is that several convolution operations get skipped in a convolutional layer, and because each convolution computes one value of the layer's output, the output's dimensions get decreased, while the input size remains the same. \n",
     "\n",
-    "Flipping the stride from 1 to 2 in a convolutional layer unleashes a skip-a-thon, skipping every other convolution operation. With a stride of 1, the kernel takes it slow, moving one step at a time. But with a swaggering stride of 2, it's a double jump – two steps at a time. In the grand scheme of things, this stride switcheroo practically slices the output dimensions in half. It's like a dance move that cuts the convolutional hustle in half, keeping the input size chillin'."
+    "With a stride of 1, what happens is that the kernel moves one column at a time in the same row, and one row at a time in the same column. However, with a stride of 2 the kernel moves two columns at a time in the same row, and two rows at a time in the same column. In short, a convolutional layer with stride of 2 skips one convolution operations at a time, meaning that only half of the convolutions made with a stride of 1 will actually occur with stride 2.\n",
+    "\n",
+    "Looking at the equation that defines the output size, by changing the stride from 1 to 2, the output dimensions get decreased practically in half because of the decay in the number of convolution operations mention above."
    ]
   },
   {
@@ -289,18 +266,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the following statement: ”Pooling layers introduce a trade-off between information loss and dimensionality reduction”, we can say that is summarizes correctly the role that a Pooling layer has in a convolutional neural network. A pooling layer shares one main idea with a convolutional layer, which is the fact that it reduces the size of the input by applying a kernel to it. However, a pooling layer is much different that a convolutional layer because of two main factors. Firstly, the kernel in a pooling layers doesn't apply convolution operation to the input; a pooling layer can apply either a maximum operation, an average operation, or a minimum operation (althouth the first two are more used given they show better results). Secondly, a pooling layer doesn't have any trainable parameters (or parameters even), while a convolutional layer has. This second difference is very crucial because we're able to simplify out problem by reducing the size of the data without increase the model's complexity (number of trainable parameters). Now, making our ConvNets lighter by reduncing the data's dimensions comes with a cost... Because we're reducing the size of the data given to a pooling layer, what happens is that we lose information by filtering some data out. For example, a MaxPooling layer with a kernel size of 2 retrieves only one value from a region with four values (2x2 square in the input), and this is applied to all the data points given to the model (images for example). Usually a pooling layer with a kernel size of 2 is also used with a stride of 2, and this means that we reduce the input data by exactly half, and filters out 75% of all the data values for each data point. So, going back to the initial statement... It's true that we lose information by applying a pooling layer (regardless of what type), however we have the trade-off of reducing our data's dimensions, so that the models don't need as much computations to fit to the data while also not adding a single trainable parameter to the ConvNet."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**ChatGPT's feedback with my writing style...**\n",
+    "Looking at the following statement: ”Pooling layers introduce a trade-off between information loss and dimensionality reduction”, we can say that is summarizes correctly the role that a Pooling layer has in a convolutional neural network. \n",
     "\n",
-    "Regarding the statement 'Pooling layers introduce a trade-off between information loss and dimensionality reduction,' it accurately encapsulates the role of a pooling layer in a convolutional neural network. Unlike a convolutional layer, a pooling layer doesn't perform convolution operations on the input but applies operations like maximum, average, or minimum. Importantly, a pooling layer lacks trainable parameters, simplifying the model without adding complexity.\n",
+    "A pooling layer shares one main idea with a convolutional layer, which is the fact that it reduces the size of the input by applying a kernel to it. However, a pooling layer is much different that a convolutional layer because of two main factors. Firstly, the kernel in a pooling layers doesn't apply convolution operation to the input; a pooling layer can apply either a maximum operation, an average operation, or a minimum operation (althouth the first two are more used given their proven performance superiority). Secondly, a pooling layer doesn't have any trainable parameters (or parameters even), while a convolutional layer has. This second difference is very crucial because we're able to simplify our problem by reducing the size of the data without increase the model's complexity (number of trainable parameters). \n",
     "\n",
-    "Reducing data dimensions through pooling comes at the cost of information loss. For instance, a MaxPooling layer with a kernel size of 2 and a stride of 2 reduces input data by half, filtering out 75% of data values. Despite information loss, the trade-off involves lighter ConvNets that demand fewer computations to fit the data without introducing additional trainable parameters."
+    "Now, reduncing our data's dimensions comes with a cost... Because we're reducing the size of the data given to a pooling layer, what happens is that we lose information by filtering some data out. For example, a MaxPooling layer with a kernel size of 2 retrieves only one value from a region with four values at a time (just like in a convolutional layer), and this is applied to all the data points given to the model (images for example). Usually a pooling layer with a kernel size of 2 is also used with a stride of 2, and this means that we reduce the input data by exactly half while filtering out 75% of all the data values for each pooling operation. \n",
+    "\n",
+    "So, going back to the initial statement... It's true that we lose information by applying a pooling layer (regardless of what type), however we have the trade-off of reducing our data's dimensions, and dimensionality reduction is crucial because computational resources aren't infinite, and so we need it in order to train ConvNets more efficiently and in timely manner."
    ]
   },
   {
