--- a/Assignment 2/A2_P2.ipynb
+++ b/Assignment 2/A2_P2.ipynb
@@ -44,12 +44,10 @@
     "\n",
     "\n",
     "\n",
-    "In situations where OOV words are prevalent, **subword tokenization** offers several advantages over traditional word-based tokenization:\n",
-    "**Reduced OOV Rate**: Subwords effectively decompose OOV words into known units, significantly reducing the number of true OOV tokens encountered by the model.\n",
-    "\n",
-    "**Improved Representation**: By representing OOV words using subwords, the model can still extract contextual information and semantic relationships from these words, even if they haven't been explicitly trained on.\n",
-    "\n",
-    "**Vocabulary Flexibility**: Subword tokenization techniques don't require a fixed vocabulary, allowing the model to adapt to new words and languages without explicit vocabulary updates.\n",
+    "In situations where OOV words are prevalent, **subword tokenization** offers several advantages like:\n",
+    " 1) **Reduced OOV Rate**, because Subwords effectively decompose OOV words into known units, significantly reducing the number of true OOV tokens encountered by the model;\n",
+    " 2) **Improved Representation** by representing OOV words using subwords, the model can still extract contextual information and semantic relationships from these words, even if they haven't been explicitly trained on;\n",
+    " 3) **Vocabulary Flexibility**: Subword tokenization techniques don't require a fixed vocabulary, allowing the model to adapt to new words and languages without explicit vocabulary updates.\n",
     "\n",
     "Therefore, **subword tokenization** is the preferred choice for scenarios where OOV words are expected, as it effectively handles these rare words while still preserving meaningful information for model training and prediction."
    ],
