--- a/NLP Project/notebook.ipynb
+++ b/NLP Project/notebook.ipynb
@@ -1,16 +1,462 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports, Custom Functions & Data Loading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import re\n",
+    "import spacy \n",
+    "\n",
+    "# spacy.cli.download(\"en_core_web_lg\")\n",
+    "nlp = spacy.load('en_core_web_lg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_csv(filename):\n",
+    "    return pd.read_csv(filename, sep=',', encoding='utf-8', index_col=0).iloc[:, -2:].reset_index(drop=True)\n",
+    "\n",
+    "\n",
+    "def preprocess(text):\n",
+    "    \n",
+    "    # remove URLs\n",
+    "    text = re.sub('http\\S*', ' ', text)\n",
+    "    \n",
+    "    # remove non-alphabetic\n",
+    "    text = re.sub(\"[^a-zA-Z]\", \" \", text)\n",
+    "    \n",
+    "    # make lowercase\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    # remove one character word\n",
+    "    text = re.sub(\"\\s+[a-zA-Z]\\s+\", ' ', text)\n",
+    "    text = re.sub(\"^[a-zA-Z]\\s+\", '', text)\n",
+    "    \n",
+    "    # replace double space to one space\n",
+    "    text = re.sub(\"\\s+\", ' ', text)\n",
+    "    \n",
+    "    # tokenize, lemmatize, remove stop words\n",
+    "    doc = nlp(text)\n",
+    "    text = [token.lemma_ for token in doc if not token.is_stop]\n",
+    "    return \" \".join(text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  target\n",
+       "0  Our Deeds are the Reason of this #earthquake M...       1\n",
+       "1             Forest fire near La Ronge Sask. Canada       1\n",
+       "2  All residents asked to 'shelter in place' are ...       1\n",
+       "3  13,000 people receive #wildfires evacuation or...       1\n",
+       "4  Just got sent this photo from Ruby #Alaska as ...       1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Just happened a terrible car crash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Heard about #earthquake is different cities, s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>there is a forest fire at spot pond, geese are...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apocalypse lighting. #Spokane #wildfires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Typhoon Soudelor kills 28 in China and Taiwan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text\n",
+       "0                 Just happened a terrible car crash\n",
+       "1  Heard about #earthquake is different cities, s...\n",
+       "2  there is a forest fire at spot pond, geese are...\n",
+       "3           Apocalypse lighting. #Spokane #wildfires\n",
+       "4      Typhoon Soudelor kills 28 in China and Taiwan"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tweets_train = read_csv('../data/tweets_data/train.csv')\n",
+    "tweets_test = read_csv('../data/tweets_data/test.csv')[['text']]\n",
+    "\n",
+    "print('Training data')\n",
+    "display(tweets_train.head())\n",
+    "print()\n",
+    "print('Testing data')\n",
+    "display(tweets_test.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Text pre-processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets_train['clean_text'] = tweets_train['text'].apply(preprocess)\n",
+    "tweets_test['clean_text'] = tweets_test['text'].apply(preprocess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "      <th>clean_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>deed reason earthquake allah forgive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+       "      <td>1</td>\n",
+       "      <td>forest fire near la ronge sask canada</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>resident ask shelter place notify officer evac...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>people receive wildfire evacuation order cal...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>got send photo ruby alaska smoke wildfire pour...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  target  \\\n",
+       "0  Our Deeds are the Reason of this #earthquake M...       1   \n",
+       "1             Forest fire near La Ronge Sask. Canada       1   \n",
+       "2  All residents asked to 'shelter in place' are ...       1   \n",
+       "3  13,000 people receive #wildfires evacuation or...       1   \n",
+       "4  Just got sent this photo from Ruby #Alaska as ...       1   \n",
+       "\n",
+       "                                          clean_text  \n",
+       "0               deed reason earthquake allah forgive  \n",
+       "1              forest fire near la ronge sask canada  \n",
+       "2  resident ask shelter place notify officer evac...  \n",
+       "3    people receive wildfire evacuation order cal...  \n",
+       "4  got send photo ruby alaska smoke wildfire pour...  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Testing data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>clean_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Just happened a terrible car crash</td>\n",
+       "      <td>happen terrible car crash</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Heard about #earthquake is different cities, s...</td>\n",
+       "      <td>hear earthquake different city stay safe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>there is a forest fire at spot pond, geese are...</td>\n",
+       "      <td>forest fire spot pond goose flee street save</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Apocalypse lighting. #Spokane #wildfires</td>\n",
+       "      <td>apocalypse lighting spokane wildfire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Typhoon Soudelor kills 28 in China and Taiwan</td>\n",
+       "      <td>typhoon soudelor kill china taiwan</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  \\\n",
+       "0                 Just happened a terrible car crash   \n",
+       "1  Heard about #earthquake is different cities, s...   \n",
+       "2  there is a forest fire at spot pond, geese are...   \n",
+       "3           Apocalypse lighting. #Spokane #wildfires   \n",
+       "4      Typhoon Soudelor kills 28 in China and Taiwan   \n",
+       "\n",
+       "                                     clean_text  \n",
+       "0                     happen terrible car crash  \n",
+       "1      hear earthquake different city stay safe  \n",
+       "2  forest fire spot pond goose flee street save  \n",
+       "3          apocalypse lighting spokane wildfire  \n",
+       "4            typhoon soudelor kill china taiwan  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print('Training data')\n",
+    "display(tweets_train.head())\n",
+    "print()\n",
+    "print('Testing data')\n",
+    "display(tweets_test.head())"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
