--- a/NLP Project/notebook.ipynb
+++ b/NLP Project/notebook.ipynb
@@ -30,6 +30,8 @@
     "from collections import Counter, defaultdict\n",
     "from transformers import AutoTokenizer\n",
     "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
     "# spacy.cli.download(\"en_core_web_lg\")\n",
     "nlp = spacy.load('en_core_web_lg')"
    ]
@@ -1813,6 +1815,245 @@
     "print()\n",
     "print('Testing data')\n",
     "display(tweets_test.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF to convert Text into Input Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply TF-IDF vectorizer to the training data\n",
+    "tweets_train['tokenized_text_tfidf'] = tweets_train['tokenized_text'].apply(lambda tokens: ' '.join(tokens))\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X_train = vectorizer.fit_transform(tweets_train['tokenized_text_tfidf'])\n",
+    "y_train = tweets_train['target']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the TF-IDF matrix to a dense NumPy array\n",
+    "dense_tfidf_matrix = X_train.todense()\n",
+    "\n",
+    "# Convert the dense matrix to a DataFrame\n",
+    "tweets_train_TFIDF = pd.DataFrame(dense_tfidf_matrix, columns=vectorizer.get_feature_names_out())\n",
+    "# Add the target column to the DataFrame\n",
+    "tweets_train_TFIDF['target'] = y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aa</th>\n",
+       "      <th>aaaa</th>\n",
+       "      <th>aaaaa</th>\n",
+       "      <th>aaaaaa</th>\n",
+       "      <th>aace</th>\n",
+       "      <th>aal</th>\n",
+       "      <th>aan</th>\n",
+       "      <th>aar</th>\n",
+       "      <th>aashiqui</th>\n",
+       "      <th>ab</th>\n",
+       "      <th>...</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>zonewolf</th>\n",
+       "      <th>zor</th>\n",
+       "      <th>zouma</th>\n",
+       "      <th>zrnf</th>\n",
+       "      <th>zss</th>\n",
+       "      <th>zu</th>\n",
+       "      <th>zy</th>\n",
+       "      <th>zz</th>\n",
+       "      <th>zzy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 8608 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    aa  aaaa  aaaaa  aaaaaa  aace  aal  aan  aar  aashiqui   ab  ...  zone  \\\n",
+       "0  0.0   0.0    0.0     0.0   0.0  0.0  0.0  0.0       0.0  0.0  ...   0.0   \n",
+       "1  0.0   0.0    0.0     0.0   0.0  0.0  0.0  0.0       0.0  0.0  ...   0.0   \n",
+       "2  0.0   0.0    0.0     0.0   0.0  0.0  0.0  0.0       0.0  0.0  ...   0.0   \n",
+       "3  0.0   0.0    0.0     0.0   0.0  0.0  0.0  0.0       0.0  0.0  ...   0.0   \n",
+       "4  0.0   0.0    0.0     0.0   0.0  0.0  0.0  0.0       0.0  0.0  ...   0.0   \n",
+       "\n",
+       "   zonewolf  zor  zouma  zrnf  zss   zu   zy   zz  zzy  \n",
+       "0       0.0  0.0    0.0   0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "1       0.0  0.0    0.0   0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "2       0.0  0.0    0.0   0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "3       0.0  0.0    0.0   0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "4       0.0  0.0    0.0   0.0  0.0  0.0  0.0  0.0  0.0  \n",
+       "\n",
+       "[5 rows x 8608 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sparse matrix with TF-IDF values, where eacg row represents a tweet and each column represents a word\n",
+    "tweets_train_TFIDF.head()"
    ]
   }
  ],
