Transformer learning rate scheduler implemented in BERTweet

--- a/NLP Project/notebook.ipynb
+++ b/NLP Project/notebook.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-29T17:20:52.010941200Z",
@@ -636,7 +636,7 @@
     "    return train_loss_lst, train_f1_lst, test_loss_lst, test_f1_lst\n",
     "\n",
     "\n",
-    "def train_BERTweet(model, train_loader, test_loader, optimizer, loss_func, epochs, device, **kwargs):\n",
+    "def train_BERTweet(model, train_loader, test_loader, optimizer, scheduler, loss_func, epochs, device, **kwargs):\n",
     "    \"\"\"\n",
     "    Trains a neural network model.\n",
     "\n",
@@ -685,6 +685,7 @@
     "\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "            scheduler.step()\n",
     "\n",
     "            predicted = (logits > 0.0).float()\n",
     "            correct_batch = (predicted == target).sum().item()\n",
@@ -3676,7 +3677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3694,7 +3695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3704,7 +3705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3724,7 +3725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3740,12 +3741,15 @@
     "device = set_device()\n",
     "BERTweetbase = BERTweetbase.to(device)\n",
     "criterion = torch.nn.BCEWithLogitsLoss()\n",
-    "optimizer = torch.optim.AdamW(BERTweetbase.parameters(), lr = 5e-5)"
+    "optimizer = torch.optim.AdamW(BERTweetbase.parameters(), lr = 5e-5)\n",
+    "scheduler = get_linear_schedule_with_warmup(optimizer = optimizer, \n",
+    "                                            num_warmup_steps = int(0.1 * len(TrainDataLoader) * 2), \n",
+    "                                            num_training_steps = len(TrainDataLoader) * 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3753,27 +3757,23 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "======== Training phase ========\n",
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+      "======== Training phase ========\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss = 0.5367 | Accuracy = 75.86% | F1-Score = 72.00% | Batch ID = 238 : 100%|██████████| 238/238 [01:07<00:00,  3.55it/s]\n"
+      "Loss = 0.2554 | Accuracy = 89.66% | F1-Score = 86.96% | Batch ID = 238 : 100%|██████████| 238/238 [01:05<00:00,  3.61it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Cross-Entropy Loss = 0.4432\n",
-      "Training Accuracy = 80.47%\n",
-      "Training F1-Score = 76.26%\n",
+      "Training Cross-Entropy Loss = 0.4488\n",
+      "Training Accuracy = 79.63%\n",
+      "Training F1-Score = 75.52%\n",
       "======== Validation phase ========\n"
      ]
     },
@@ -3781,16 +3781,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss = 0.3848 | Accuracy = 87.10% | F1-Score = 90.48% | Batch ID = 102 : 100%|██████████| 102/102 [00:06<00:00, 15.72it/s]\n"
+      "Loss = 0.3345 | Accuracy = 87.10% | F1-Score = 90.48% | Batch ID = 102 : 100%|██████████| 102/102 [00:06<00:00, 16.17it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Cross-Entropy Loss = 0.4469\n",
-      "Test Accuracy = 80.63%\n",
-      "Test F1-Score = 78.44%\n",
+      "Test Cross-Entropy Loss = 0.3848\n",
+      "Test Accuracy = 84.03%\n",
+      "Test F1-Score = 80.02%\n",
       "\n",
       "Epoch 2/2\n",
       "======== Training phase ========\n"
@@ -3800,16 +3800,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss = 0.2217 | Accuracy = 96.55% | F1-Score = 94.74% | Batch ID = 238 : 100%|██████████| 238/238 [01:06<00:00,  3.59it/s]  \n"
+      "Loss = 0.2223 | Accuracy = 93.10% | F1-Score = 91.67% | Batch ID = 238 : 100%|██████████| 238/238 [01:05<00:00,  3.62it/s]  \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Cross-Entropy Loss = 0.3462\n",
-      "Training Accuracy = 86.05%\n",
-      "Training F1-Score = 82.80%\n",
+      "Training Cross-Entropy Loss = 0.3242\n",
+      "Training Accuracy = 87.22%\n",
+      "Training F1-Score = 84.24%\n",
       "======== Validation phase ========\n"
      ]
     },
@@ -3817,16 +3817,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss = 0.4722 | Accuracy = 87.10% | F1-Score = 90.48% | Batch ID = 102 : 100%|██████████| 102/102 [00:06<00:00, 16.16it/s]"
+      "Loss = 0.4414 | Accuracy = 87.10% | F1-Score = 90.48% | Batch ID = 102 : 100%|██████████| 102/102 [00:06<00:00, 16.16it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Cross-Entropy Loss = 0.4356\n",
-      "Test Accuracy = 82.96%\n",
-      "Test F1-Score = 80.17%\n",
+      "Test Cross-Entropy Loss = 0.3913\n",
+      "Test Accuracy = 84.37%\n",
+      "Test F1-Score = 80.88%\n",
       "\n"
      ]
     },
@@ -3839,7 +3839,14 @@
     }
    ],
    "source": [
-    "train_losses, train_f1s, test_losses, test_f1s = train_BERTweet(BERTweetbase, TrainDataLoader, TestDataLoader, optimizer, criterion, epochs = 2, device = device)"
+    "train_losses, train_f1s, test_losses, test_f1s = train_BERTweet(model = BERTweetbase, \n",
+    "                                                                train_loader = TrainDataLoader, \n",
+    "                                                                test_loader = TestDataLoader, \n",
+    "                                                                optimizer = optimizer, \n",
+    "                                                                scheduler = scheduler,\n",
+    "                                                                loss_func = criterion, \n",
+    "                                                                epochs = 2, \n",
+    "                                                                device = device)"
    ]
   },
   {
@@ -3961,14 +3968,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102/102 [00:06<00:00, 16.70it/s]\n"
+      "100%|██████████| 102/102 [00:06<00:00, 16.54it/s]\n"
      ]
     }
    ],
@@ -3978,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3990,9 +3997,9 @@
       "╒═══════════════════════╤════════════════════════════╤══════════════════════╕\n",
       "│                       │  Predicted Not a Disaster  │  Predicted Disaster  │\n",
       "╞═══════════════════════╪════════════════════════════╪══════════════════════╡\n",
-      "│ Actual Not a Disaster │            1583            │         278          │\n",
+      "│ Actual Not a Disaster │            1674            │         323          │\n",
       "├───────────────────────┼────────────────────────────┼──────────────────────┤\n",
-      "│    Actual Disaster    │            278             │         1124         │\n",
+      "│    Actual Disaster    │            187             │         1079         │\n",
       "╘═══════════════════════╧════════════════════════════╧══════════════════════╛\n"
      ]
     }
@@ -4003,7 +4010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4013,13 +4020,13 @@
       "╒════════════════════╤═════════╕\n",
       "│       Metric       │  Value  │\n",
       "╞════════════════════╪═════════╡\n",
-      "│      Accuracy      │ 82.96%  │\n",
+      "│      Accuracy      │ 84.37%  │\n",
       "├────────────────────┼─────────┤\n",
-      "│ Weighted Precision │ 80.17%  │\n",
+      "│ Weighted Precision │ 76.96%  │\n",
       "├────────────────────┼─────────┤\n",
-      "│  Weighted Recall   │ 80.17%  │\n",
+      "│  Weighted Recall   │ 85.23%  │\n",
       "├────────────────────┼─────────┤\n",
-      "│ Weighted F1 Score  │ 80.17%  │\n",
+      "│ Weighted F1 Score  │ 80.88%  │\n",
       "╘════════════════════╧═════════╛\n"
      ]
     }
