--- a/NLP Project/notebook.ipynb
+++ b/NLP Project/notebook.ipynb
@@ -4081,16 +4081,16 @@
      "evalue": "name 'nn' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mMultiHeadAttention\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, d_model, num_heads):\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28msuper\u001b[39m(MultiHeadAttention, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn [3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mMultiHeadAttention\u001B[39;00m(\u001B[43mnn\u001B[49m\u001B[38;5;241m.\u001B[39mModule):\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, d_model, num_heads):\n\u001B[0;32m      3\u001B[0m         \u001B[38;5;28msuper\u001B[39m(MultiHeadAttention, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'nn' is not defined"
      ]
     }
    ],
    "source": [
     "class MultiHeadAttention(nn.Module):\n",
-    "    def __init__(self, d_model, num_heads, dropout=0.1):  # Add dropout to the constructor\n",
+    "    def __init__(self, d_model, num_heads):\n",
     "        super(MultiHeadAttention, self).__init__()\n",
     "        assert d_model % num_heads == 0, \"d_model must be divisible by num_heads\"\n",
     "\n",
@@ -4103,14 +4103,12 @@
     "        self.W_v = nn.Linear(d_model, d_model)\n",
     "        self.W_o = nn.Linear(d_model, d_model)\n",
     "\n",
-    "        self.dropout = nn.Dropout(dropout)  # Add dropout layer\n",
-    "\n",
     "    def scaled_dot_product_attention(self, Q, K, V, mask=None):\n",
     "        attn_scores = torch.matmul(Q, K.transpose(-2, -1)) / math.sqrt(self.d_k)\n",
     "        if mask is not None:\n",
     "            attn_scores = attn_scores.masked_fill(mask == 0, -1e9)\n",
     "        attn_probs = torch.softmax(attn_scores, dim=-1)\n",
-    "        output = torch.matmul(self.dropout(attn_probs), V)  # Apply dropout to attention scores\n",
+    "        output = torch.matmul(attn_probs, V)\n",
     "        return output\n",
     "\n",
     "    def split_heads(self, x):\n",
@@ -4128,7 +4126,49 @@
     "\n",
     "        attn_output = self.scaled_dot_product_attention(Q, K, V, mask)\n",
     "        output = self.W_o(self.combine_heads(attn_output))\n",
-    "        return output"
+    "        return output\n",
+    "\n",
+    "class PositionWiseFeedForward(nn.Module):\n",
+    "    def __init__(self, d_model, d_ff):\n",
+    "        super(PositionWiseFeedForward, self).__init__()\n",
+    "        self.fc1 = nn.Linear(d_model, d_ff)\n",
+    "        self.fc2 = nn.Linear(d_ff, d_model)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.fc2(self.relu(self.fc1(x)))\n",
+    "\n",
+    "class PositionalEncoding(nn.Module):\n",
+    "    def __init__(self, d_model, max_seq_length):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "\n",
+    "        pe = torch.zeros(max_seq_length, d_model)\n",
+    "        position = torch.arange(0, max_seq_length, dtype=torch.float).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * -(math.log(10000.0) / d_model))\n",
+    "\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "\n",
+    "        self.register_buffer('pe', pe.unsqueeze(0))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return x + self.pe[:, :x.size(1)]\n",
+    "\n",
+    "class EncoderLayer(nn.Module):\n",
+    "    def __init__(self, d_model, num_heads, d_ff, dropout):\n",
+    "        super(EncoderLayer, self).__init__()\n",
+    "        self.self_attn = MultiHeadAttention(d_model, num_heads)\n",
+    "        self.feed_forward = PositionWiseFeedForward(d_model, d_ff)\n",
+    "        self.norm1 = nn.LayerNorm(d_model)\n",
+    "        self.norm2 = nn.LayerNorm(d_model)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x, mask):\n",
+    "        attn_output = self.self_attn(x, x, x, mask)\n",
+    "        x = self.norm1(x + self.dropout(attn_output))\n",
+    "        ff_output = self.feed_forward(x)\n",
+    "        x = self.norm2(x + self.dropout(ff_output))\n",
+    "        return x"
    ]
   },
   {
@@ -4147,10 +4187,10 @@
      "evalue": "name 'nn' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mTransformer\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, src_vocab_size, d_model, num_heads, num_layers, d_ff, max_seq_length, dropout):\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28msuper\u001b[39m(Transformer, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'nn' is not defined"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn [4], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mTransformer\u001B[39;00m(\u001B[43mnn\u001B[49m\u001B[38;5;241m.\u001B[39mModule):\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, src_vocab_size, d_model, num_heads, num_layers, d_ff, max_seq_length, dropout):\n\u001B[0;32m      3\u001B[0m         \u001B[38;5;28msuper\u001B[39m(Transformer, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'nn' is not defined"
      ]
     }
    ],
@@ -4184,7 +4224,7 @@
     "        pooled_output = F.adaptive_avg_pool1d(enc_output.permute(0, 2, 1), 1).view(enc_output.size(0), -1)\n",
     "\n",
     "        # Output layer with sigmoid activation for binary classification\n",
-    "        output = self.fc(self.dropout(pooled_output))\n",
+    "        output = self.fc(pooled_output)\n",
     "        output = self.sigmoid(output)\n",
     "        return output"
    ]
@@ -4196,7 +4236,79 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_transformer(model, train_loader, test_loader, num_epochs=5, lr=0.001):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
+    "\n",
+    "    criterion = nn.BCELoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # Training\n",
+    "        model.train()\n",
+    "        train_loss = 0.0\n",
+    "        predictions = []\n",
+    "        true_labels = []\n",
+    "\n",
+    "        for data in tqdm(train_loader, desc=f\"Epoch {epoch + 1}/ {num_epochs}\"):\n",
+    "            inputs, labels = data\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels.float())\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            train_loss += loss.item()\n",
+    "\n",
+    "            predictions.extend(outputs.cpu().detach().numpy())\n",
+    "            true_labels.extend(labels.cpu().detach().numpy())\n",
+    "\n",
+    "        train_loss /= len(train_loader)\n",
+    "\n",
+    "        # Evaluation\n",
+    "        model.eval()\n",
+    "        val_loss = 0.0\n",
+    "        val_predictions = []\n",
+    "        val_true_labels = []\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for data in tqdm(test_loader, desc=\"Validation\"):\n",
+    "                inputs, labels = data\n",
+    "                inputs, labels = inputs.to(device), labels.to(device)\n",
+    "\n",
+    "                outputs = model(inputs)\n",
+    "                loss = criterion(outputs, labels.float())\n",
+    "                val_loss += loss.item()\n",
+    "\n",
+    "                val_predictions.extend(outputs.cpu().detach().numpy())\n",
+    "                val_true_labels.extend(labels.cpu().detach().numpy())\n",
+    "\n",
+    "        val_loss /= len(test_loader)\n",
+    "\n",
+    "        # Calculate metrics\n",
+    "        train_accuracy = accuracy_score(true_labels, np.round(predictions))\n",
+    "        val_accuracy = accuracy_score(val_true_labels, np.round(val_predictions))\n",
+    "\n",
+    "        train_f1 = f1_score(true_labels, np.round(predictions))\n",
+    "        val_f1 = f1_score(val_true_labels, np.round(val_predictions))\n",
+    "\n",
+    "        print(f\"Epoch {epoch + 1}/{num_epochs}:\"\n",
+    "              f\" Train Loss: {train_loss:.4f}, Train Acc: {train_accuracy:.4f}, Train F1: {train_f1:.4f},\"\n",
+    "              f\" Val Loss: {val_loss:.4f}, Val Acc: {val_accuracy:.4f}, Val F1: {val_f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
