--- a/NLP Project/notebook.ipynb
+++ b/NLP Project/notebook.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-29T17:20:51.904959900Z",
-     "start_time": "2023-12-29T17:20:49.494279900Z"
+     "end_time": "2023-12-29T23:10:35.149706Z",
+     "start_time": "2023-12-29T23:10:30.436532800Z"
     }
    },
    "outputs": [],
@@ -28,7 +28,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch import nn, optim\n",
+    "\n",
     "import re\n",
     "import math\n",
     "import spacy \n",
@@ -72,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-29T17:20:52.010941200Z",
-     "start_time": "2023-12-29T17:20:51.949525100Z"
+     "end_time": "2023-12-29T23:10:37.072317200Z",
+     "start_time": "2023-12-29T23:10:36.877905600Z"
     }
    },
    "outputs": [],
@@ -4067,27 +4071,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-29T16:47:30.064302600Z",
-     "start_time": "2023-12-29T16:47:29.887238500Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn [3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mMultiHeadAttention\u001B[39;00m(\u001B[43mnn\u001B[49m\u001B[38;5;241m.\u001B[39mModule):\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, d_model, num_heads):\n\u001B[0;32m      3\u001B[0m         \u001B[38;5;28msuper\u001B[39m(MultiHeadAttention, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'nn' is not defined"
-     ]
+     "end_time": "2023-12-29T23:11:27.031219500Z",
+     "start_time": "2023-12-29T23:11:27.022593400Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "class MultiHeadAttention(nn.Module):\n",
     "    def __init__(self, d_model, num_heads):\n",
@@ -4173,27 +4165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-29T16:48:09.263483800Z",
-     "start_time": "2023-12-29T16:48:09.118442900Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn [4], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mTransformer\u001B[39;00m(\u001B[43mnn\u001B[49m\u001B[38;5;241m.\u001B[39mModule):\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, src_vocab_size, d_model, num_heads, num_layers, d_ff, max_seq_length, dropout):\n\u001B[0;32m      3\u001B[0m         \u001B[38;5;28msuper\u001B[39m(Transformer, \u001B[38;5;28mself\u001B[39m)\u001B[38;5;241m.\u001B[39m\u001B[38;5;21m__init__\u001B[39m()\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'nn' is not defined"
-     ]
+     "end_time": "2023-12-29T23:11:42.408492600Z",
+     "start_time": "2023-12-29T23:11:42.384459100Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "class Transformer(nn.Module):\n",
     "    def __init__(self, src_vocab_size, d_model, num_heads, num_layers, d_ff, max_seq_length, dropout):\n",
@@ -4226,7 +4206,7 @@
     "        # Output layer with sigmoid activation for binary classification\n",
     "        output = self.fc(pooled_output)\n",
     "        output = self.sigmoid(output)\n",
-    "        return output"
+    "        return output\n"
    ]
   },
   {
